Funcional 3.0: Detalles graficos (simbolos en conversiones) y nombre en el main_activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="DolarAcolon">Dolares a Colones</string>
     <string name="ColonAdolar">Colones a Dolares</string>
     <string name="Convertir">Convertir</string>
+    <string name="WaterHint">Monto a Convertir</string>
 </resources>
